objects/BP_Application__c.object
<CustomObject><fields>
        <fullName>AbilityToFollow__c</fullName>
        <label>Ability to Follow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Above average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>AbilityToSpeakEnglish__c</fullName>
        <description>How well do you speak English?</description>
        <inlineHelpText>How well do you speak English? (1 being not proficient - 5 being proficient)</inlineHelpText>
        <label>Ability to Speak English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>AbilityToWorkWithOthers__c</fullName>
        <label>Ability to Work With Others</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>AbilityToWriteEnglish__c</fullName>
        <description>How well can you write in English?</description>
        <inlineHelpText>How well can you write in English?</inlineHelpText>
        <label>Ability to Write English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Addiction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addiction</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>AlcoholSmokingAddictions__c</fullName>
        <description>Do you currently struggle with alcohol, smoking or any other addiction?</description>
        <inlineHelpText>Do you currently struggle with alcohol, smoking or any other addiction?</inlineHelpText>
        <label>Alcohol, Smoking, Addictions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>AllLecturePhaseFees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you have your complete lecture phase fees?</description>
        <inlineHelpText>Do you have your complete lecture phase fees?</inlineHelpText>
        <label>All Lecture Phase Fees</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>AllOutreachPhaseFees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you have your complete outreach phase fees? (approximately CHF 2,500 - 5, 000)</description>
        <inlineHelpText>Do you have your complete outreach phase fees? (approximately CHF 2,500 - 5, 000)</inlineHelpText>
        <label>All Outreach Phase Fees</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Anemia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anemia</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Anxiety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anxiety</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>AnyAdditionalComments__c</fullName>
        <description>Is there any further information that you think would help us as we consider your application?</description>
        <inlineHelpText>Is there any further information that you think would help us as we consider your application?</inlineHelpText>
        <label>Any Additional Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ApplicationContactHeader__c</fullName>
        <formula>"Gender: " + TEXT(Contact__r.Gender__c) + " | Age: " +  TEXT(Contact__r.Age__c) + " | Nationality: " + Contact__r.NationalityPrimary__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Contact Header</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ApplicationType__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DTS</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>MLD</fullName>
                </value>
                <value>
                    <fullName>ELM</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>OUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>AreYouInDebt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are you in debt?</description>
        <inlineHelpText>Please check the box if you are in debt.</inlineHelpText>
        <label>Are You in Debt?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>AreYouPregnant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are You Pregnant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>AreYouTakingAnyMedication__c</fullName>
        <description>Are you currently taking any medication?</description>
        <inlineHelpText>Are you currently taking any medication?</inlineHelpText>
        <label>Are You Taking Any Medication?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>AreYouUnderADoctorsCare__c</fullName>
        <description>Are you currently under a doctors care?</description>
        <inlineHelpText>If yes, please explain what you are seeking help for.</inlineHelpText>
        <label>Are You Under a Doctor's Care?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Arthritis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arthritis</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Asthma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asthma</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>BackTrouble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back Trouble</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>BrokenBones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broken Bones</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ChurchAddress__c</fullName>
        <label>Church Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ChurchAttendanceInYears__c</fullName>
        <description>How long have you attended this Church?</description>
        <inlineHelpText>How long have you attended this Church?</inlineHelpText>
        <label>Church Attendance in Years</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ChurchTelephone__c</fullName>
        <label>Church Telephone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>ChurchWebPage__c</fullName>
        <label>Church Web Page</label>
        <type>Url</type>
    </fields><fields>
        <fullName>CommunityLivingStandards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Living Standards</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CompletedHighSchool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you completed High School?</description>
        <inlineHelpText>Please check the box if you have completed high school.</inlineHelpText>
        <label>Completed High School</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ConcernforOthers__c</fullName>
        <label>Concern for Others</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ConsentforTreatment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent for Treatment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ContactEmailAutoUpdate__c</fullName>
        <label>Contact Email (Auto Update)</label>
        <type>Email</type>
    </fields><fields>
        <fullName>ContactPhoto__c</fullName>
        <formula>Contact__r.Photo__c</formula>
        <label>Contact Photo</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>BP_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>CriminalRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you ever been convicted of a criminal offence?</description>
        <inlineHelpText>Please check the box if you have ever been convicted of a criminal offence.</inlineHelpText>
        <label>Do You Have a Criminal Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CurrentFinancialSupportAmount__c</fullName>
        <description>Do you receive ongoing/regular financial support every month?</description>
        <inlineHelpText>Do you receive ongoing/regular financial support every month?</inlineHelpText>
        <label>Financial supporters and statements</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>DTSOutreachYWAMExperiencePlaceDate__c</fullName>
        <label>DTS/Outreach/YWAM Experience:Place/Date</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I declare that the information provided in this entire application is true and correct.</inlineHelpText>
        <label>I Declare that All Information is True</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Depression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Depression</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Diphtheria__c</fullName>
        <label>Diphtheria</label>
        <type>Date</type>
    </fields><fields>
        <fullName>DislocatedJoints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dislocated Joints</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>DoYouHaveAnyDietaryNeeds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you have any dietary needs?</description>
        <inlineHelpText>Please check if you have any dietary needs.</inlineHelpText>
        <label>Do You Have Any Dietary Needs?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>DoYouHaveAnyHealthConditions__c</fullName>
        <description>Do you have any current ongoinng Health Conditions?</description>
        <inlineHelpText>Do you have any current ongoing Health Conditions?</inlineHelpText>
        <label>Do You Have Any Health Conditions?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>DoYouKnowAnyYWAMLausanneStaff__c</fullName>
        <description>Do you know any current or previous YWAM Lausanne staff?</description>
        <inlineHelpText>If so, please put down their names.</inlineHelpText>
        <label>Do you know any YWAM Lausanne staff?</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>DrugAllergy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug Allergy</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EarTrouble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ear Trouble</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EatingDisorders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eating Disorders</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EmotionalStability__c</fullName>
        <label>Emotional Stability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Environmental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental Allergy</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Epilepsy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Epilepsy</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EyeTrouble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eye Trouble</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>FaintingSpells__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fainting Spells</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>FinancialResponsibilityOne__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Responsibility</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>FinancialResponsibility__c</fullName>
        <label>Financial Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FlexibilityOpennesstoChange__c</fullName>
        <label>Flexibility/Openness to Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FoodAllergy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food Allergy</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>FriendReferenceCompletedDate__c</fullName>
        <label>Friend Reference Completed Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>FriendReferenceEmail__c</fullName>
        <label>Friend Reference Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>FriendReferenceFirstName__c</fullName>
        <label>Friend Reference First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FriendReferenceLanguage__c</fullName>
        <label>Friend Reference Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FriendReferenceLastName__c</fullName>
        <label>Friend Reference Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FriendReferenceStatus__c</fullName>
        <label>Friend Reference Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Not Yet Complete</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>FurtherTrainingOrMinistryWithYWAM__c</fullName>
        <description>Are you considering any further training or Ministry with YWAM after this program? If so, please specify.</description>
        <inlineHelpText>Are you considering any further training or Ministry with YWAM after this program? If so, please specify.</inlineHelpText>
        <label>Further Training or Ministry With YWAM</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>FurthestStepCompleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Furthest Step Completed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>GallBladderTrouble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gall Bladder Trouble</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>GratefulSpirit__c</fullName>
        <label>Grateful Spirit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>HeartTrouble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heart Trouble</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Heightcm__c</fullName>
        <label>Height (cm)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>HepatitisA__c</fullName>
        <label>Hepatitis A</label>
        <type>Date</type>
    </fields><fields>
        <fullName>HepatitisB__c</fullName>
        <label>HepatitisB</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Hepatitis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hepatitis</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HistoryofLearnedEnglish__c</fullName>
        <description>Please describe your history of learning English.</description>
        <inlineHelpText>Please describe your history of learning English.</inlineHelpText>
        <label>History of Learned English</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>HowDidYouComeToKnowJesus__c</fullName>
        <description>Describe how you came to know Jesus personally</description>
        <inlineHelpText>Describe how you came to know Jesus personally.</inlineHelpText>
        <label>How Did You Come to Know Jesus</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>HowDidYouHearAboutYWAMLausanne__c</fullName>
        <description>How did you hear about YWAM Lausanne?(i.e. SNS, Friends,Webpage, Book...)</description>
        <inlineHelpText>How did you hear about YWAM Lausanne?(i.e. SNS, Friends,Webpage, Book...)</inlineHelpText>
        <label>How Did You Hear About YWAM Lausanne?</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HowDoYouOvercomeYourSturggles__c</fullName>
        <description>How are you seeking help and support to overcome your struggles and challenges</description>
        <inlineHelpText>How are you seeking help and support to overcome your struggles and challenges?</inlineHelpText>
        <label>How Do You Overcome Your Sturggles</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IELTSScore__c</fullName>
        <description>International English Testing System (IELTS) Score</description>
        <inlineHelpText>International English Testing System (IELTS) Score</inlineHelpText>
        <label>IELTS Score</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>IHaveBeenInEUInThePast180Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you been in Europe in the past 180 days?</description>
        <inlineHelpText>Please check the box if you have been in Europe in the past 180 days.</inlineHelpText>
        <label>Have been in Europe in the past 180 days</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>IfNoHowDoYouPlanOnRaisingThis__c</fullName>
        <description>If no, how do you plan on raising this support?</description>
        <inlineHelpText>If no, how do you plan on raising this support?</inlineHelpText>
        <label>If No, How Do You Plan On Raising Funds?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IfYesDescribeProvideADoctorsNote__c</fullName>
        <description>If yes, please describe and provide a doctors note.</description>
        <inlineHelpText>If yes, please describe and provide a doctors note.</inlineHelpText>
        <label>If Yes,Describe/provide a doctors note</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IfYesHowMuch__c</fullName>
        <description>If yes, how much?</description>
        <inlineHelpText>If yes, how much?</inlineHelpText>
        <label>If yes, how much?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IfYesLocationAndDate__c</fullName>
        <description>If yes, Location and Date(Arrival + Departure)</description>
        <inlineHelpText>If yes, please state the Country, Arrival date, and Departure date.</inlineHelpText>
        <label>If yes, Location and Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IfYesToAnyAboveMedical__c</fullName>
        <description>If Yes to Any of the Above Medical Conditions/history</description>
        <inlineHelpText>Please describe the history of your medical conditions.</inlineHelpText>
        <label>If Yes, Please Explain</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IfYesToCriminalRecord__c</fullName>
        <description>If yes, please describe.</description>
        <inlineHelpText>If yes, please describe.</inlineHelpText>
        <label>If Yes to Criminal Record</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IfYesWhoAreYouInDebtTo__c</fullName>
        <description>If yes, who are you in debt to?</description>
        <inlineHelpText>If yes, who are you in debt to?</inlineHelpText>
        <label>If Yes, Who Are You In Debt To</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>IndustrialHardWorker__c</fullName>
        <label>Industrial/Hard Worker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>InitiativeSelfStarter__c</fullName>
        <label>Initiative/Self Starter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>IntestinalTroubles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intestinal Troubles</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Jaundice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jaundice</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>KidneyDisease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kidney Disease</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>LeaderReferenceCompletedDate__c</fullName>
        <label>Leader Reference Completed Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>LeaderReferenceEmail__c</fullName>
        <label>Leader Reference Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>LeaderReferenceFirstName__c</fullName>
        <label>Leader Reference First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LeaderReferenceLanguage__c</fullName>
        <label>Leader Reference Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>LeaderReferenceLastName__c</fullName>
        <label>Leader Reference Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LeaderReferenceStatus__c</fullName>
        <label>Leader Reference Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Not Yet Completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>LeadershipAbility__c</fullName>
        <label>Leadership Ability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above average</fullName>
                    <default>true</default>
                    <label>Above average</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>MentalHealthTrouble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mental Health Trouble</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Mumps__c</fullName>
        <label>Mumps</label>
        <type>Date</type>
    </fields><fields>
        <fullName>NameOfChurch__c</fullName>
        <label>Name of Church</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>NoToLectureFees__c</fullName>
        <description>If not, how much do you currently have toward your lecture fees?</description>
        <inlineHelpText>If not, how much do you currently have toward your lecture fees and how do you plan on raising the funds for the program?</inlineHelpText>
        <label>No to (Lecture Fees)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>NoToOutreachFees__c</fullName>
        <description>If not, how much do you currently have toward your outreach fees?</description>
        <inlineHelpText>If not, how much do you currently have toward your outreach fees and how do you plan on raising the funds for the program?</inlineHelpText>
        <label>No to (Outreach Fees)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>OneYearCommitmentDuration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you understand that a 1 year commitment is required following the duration of this program?</description>
        <inlineHelpText>Do you understand that a 1 year commitment is required following the duration of this program?</inlineHelpText>
        <label>One Year Commitment Agreement</label>
        <type>Checkbox</type>
    </fields>    </recordTypes></CustomObject>